--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,4 +1,10 @@
 <div>
   <h1 class="font-bold text-4xl">Home#index</h1>
-  <p>Find me in app/views/home/index.html.erb</p>
+ <p>
+
+<%= link_to  "Sign Up", "/users/sign_up"  %>
+
+</p>
+
+
 </div>
