playing with tailwind/layout

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,11 +1,11 @@
-<header>
+<header class="xl relative ">
+<h1 >The Green Mountain Trading Post</h1>
+
 
 <nav> 
-<ul>
-<li>  <%= link_to  "Home", "/" %>  </li>
-<li>   <%= link_to "North Country Notes", "/notes" %> </li>
-<li>  <%= link_to "Check the Ads", "/ads" %> </li>
-</ul>
+ <%= link_to  "Home", "/" %>  </li>
+   <%= link_to "North Country Notes", "/notes" %> </li>
+  <%= link_to "Check the Ads", "/ads" %> </li>
 </nav>
 
 </header>
